--- a/501ProjectTest/src/main/resources/application.yml
+++ b/501ProjectTest/src/main/resources/application.yml
@@ -11,8 +11,8 @@ spring:
       
   datasource: 
     url: jdbc:oracle:thin:@localhost:1521/xe
-    username: test1
-    password: test1
+    username: jpanda
+    password: jpanda
     driver-class-name: oracle.jdbc.driver.OracleDriver
 
   # Jpa Setting
