--- a/501ProjectTest/src/main/resources/application.yml
+++ b/501ProjectTest/src/main/resources/application.yml
@@ -28,8 +28,8 @@ spring:
   # View Resolver
   mvc:
     view:
-      prefix: /resources/templates/        # /WEB-INF/views/
-      suffix: .html
+      prefix: /WEB-INF/views/
+      suffix: .jsp
           
 # Mybatis
 mybatis:
