--- a/501ProjectTest/build.gradle
+++ b/501ProjectTest/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '2.7.10'
 	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
+	id 'war'
 }
 
 group = 'com.oracle'
@@ -34,8 +35,17 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+	
+	implementation 'commons-fileupload:commons-fileupload:1.4'
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+war {
+    archiveName 'myapp.war'
+    webInf {
+        from 'src/main/webapp/WEB-INF'
+    }
 }
